* Removed cl_stats cvar (replaced with cl_showpos)
* Removed "test" rendering code:
	* Removed cl_testblend cvar
	* Removed cl_testentities cvar
	* Removed cl_testlights cvar
	* Removed cl_testparticles cvar
* Removed svc_nop protocol message (was useless)
* Removed F2 menu to view hotkeys (was useless)
	* Removed "inven" command
	* Removed svc_inventory protocol message

Version 0.0.6.161 (Build 161)
April 6, 2024
* Fixed typing lowercase in chat (workaround)
* Fixed panning up and down on playtest builds
* Fixed the game functioning on some computers

Version 0.0.6.152 (Build 152)
April 6, 2024
* Zombie rebalancing:
	* Regular Zombie/Average Joe Zombie
		* Damage: 10 -> 15
		* Health: 40 -> 60
	* Zombie on Speed:
		* Damage: 80 -> 25
		* Health: 40 -> 50
	* Ogre:
		* Health: 40 -> 105
		* Damage is still 80 for melee (only idiots can run into it) and 40 for rockets
* Changed default crouch bind from C to CTRL
* MAX_TOTAL_ENT_LEAFS 128 -> 256
* Began working on the game's various attached network services.
	* Curl is now integrated into the engine. On Windows, this appears to require horrifying hacks.
	* The game contacts updates.zombono.com for an internet connection check. This is done after config.cfg is run, so you can put "ns_nointernetcheck 1" in your 	
		config.cfg or default.cfg to not run the check, if you don't like this for whatever reason. If you want to completely cut off all connections to zombono.com, put
		"ns_disabled 1" in your config.cfg or default.cfg files.
* The game now has an auto-incrementing build number that increments by one each time the game is compiled.
	* This is for the updater so that updates can be reissued without changing the game's version number.
* MAX_MSGLEN 2800 -> 16384 (same as Quake 3)
* MAX_EDICTS 1024 -> 2048
* Added a particle effect and sound when you spawn a monster using the Bamfuslicator
* Fixed a bug where switching from director to player mid game did not disable the Bamfuslicator's UI