@@ -18,9 +18,10 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+
+// game_player_trail.c: Monster pursuit trail
+
 #include <game_local.h> 
-
-
 /*
 ==============================================================================
 
