@@ -19,6 +19,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+// game_save.c: Deals with saving and loading the game to SSV files
 
 #include <game_local.h>
 
