@@ -24,14 +24,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <game_local.h>
 #include <mobs/mob_player.h>
 
-/*
-======================================================================
-
-SHOTGUN / SUPERSHOTGUN
-
-======================================================================
-*/
-
 void Weapon_shotgun_fire(edict_t* ent)
 {
 	vec3_t		start;
