@@ -1,5 +1,6 @@
 /*
 Copyright (C) 1997-2001 Id Software, Inc.
+Copyright (C) 2023-2024 starfrost
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -21,8 +22,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 // snddma_null.c
 // all other sound mixing is portable
 
-#include "../client/client.h"
-#include "../client/snd_loc.h"
+#include <client/client.h>
+#include <client/snd_loc.h>
 
 bool SNDDMA_Init(void)
 {
